width correct margin on mobile

--- a/src/Components/CharacterEvolution.css
+++ b/src/Components/CharacterEvolution.css
@@ -121,4 +121,7 @@
     font-size: 14px;
     width: 90%;
   }
+  .cast-pages-character-text-container {
+    width: 90%;
+  }
 }
